--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -5,7 +5,8 @@
         "node": true
     },
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "plugin:prettier/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -14,6 +15,11 @@
     "parserOptions": {
         "ecmaVersion": 2018
     },
+    "plugins": [
+      "prettier"
+    ],
     "rules": {
+      "camelcase": "off",
+      "prettier/prettier": "error"
     }
 }
