--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -5,7 +5,9 @@
     },
     "extends": [
         "plugin:react/recommended",
-        "airbnb"
+        "airbnb",
+        "plugin:prettier/recommended",
+        "prettier/react"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -19,8 +21,24 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "react-hooks",
+        "prettier"
     ],
     "rules": {
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn",
+      "react/jsx-filename-extension": [1, { "extensions": [".js"] }],
+      "import/prefer-default-export": "off",
+      "prettier/prettier": "error",
+      "camelcase": "off",
+      "no-underscore-dangle": [
+        "error",
+        {
+          "allow": ["_id"]
+        }
+      ],
+      "react/prop-types": ["off"],
+      "react/jsx-props-no-spreading": ["off"]
     }
 }
