--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "DevRadar",
-    "slug": "mobile-app",
+    "slug": "devradar",
     "platforms": [
       "ios",
       "android",
