--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,7 +29,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "~8.1.0",
+    "eslint": "6.8.0"
   },
   "private": true
 }
