--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -18,8 +18,13 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "react-hooks"
     ],
     "rules": {
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn",
+      "react/jsx-filename-extension": [1, { "extensions": [".js"] }],
+      "import/prefer-default-export": "off"
     }
 }
